fix: `resizable-handler` z-index compatible with antd

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   position: absolute;
   right: -5px;
   bottom: 0;
-  z-index: 2;
+  z-index: 1;
   display: flex;
   justify-content: center;
   width: 10px;
